added 1.33 aspect ratio devices

--- a/app/templates/index_3.html
+++ b/app/templates/index_3.html
@@ -480,9 +480,12 @@
 								</div>
   								<div class="col-md-5 text-left">
 									<select class="cmbox" name="device" id="deviceCombo" disabled>
-										<option value="1">15 &mu;m orifice generator</option>
-                                        <option value="2">22.5 &mu;m orifice generator</option>
-                                        <option value="3">30 &mu;m orifice generator</option>
+										<option value="1">15 &mu;m inner orifice width, aspect ratio of 1 </option>
+                                        <option value="2">22.5 &mu;m inner orifice width, aspect ratio of 1 </option>
+                                        <option value="3">30 &mu;m inner orifice width, aspect ratio of 1 </option>
+                                        <option value="4">15 &mu;m inner orifice width, aspect ratio of 1.33 </option>
+                                        <option value="5">22.5 &mu;m inner orifice width, aspect ratio of 1.33 </option>
+                                        <option value="6">30 &mu;m inner orifice width, aspect ratio of 1.33 </option>
 									</select>
 								</div>
 								<div class="col-md-1 text-center"></div>
