added in stanford logo

--- a/app/templates/forward_2.html
+++ b/app/templates/forward_2.html
@@ -245,6 +245,8 @@
                                             src="{{ url_for('static', filename='img/BDC.png') }}"/></a>
                     <a href='https://www.bu.edu' target="_blank"><img class="img-stakeholders"
                                                                       src="{{ url_for('static', filename='img/BU.png') }}"/></a>
+                    <a href='https://www.stanford.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/stanford_logo.png') }}"/></a>
+
                 </div>
                 <div class="col-md-6 text-right">
                     <span class='copyright'>Copyright 2022, CIDAR Lab - All Rights Reserved.</span>
