--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -33,6 +33,7 @@
 					<img class="img-stakeholders" src="{{ url_for('static', filename='img/damp-lab-logo-2x_1.png') }}"/>
 					<img class="img-stakeholders" src="{{ url_for('static', filename='img/BDC.png') }}"/>
 					<img class="img-stakeholders" src="{{ url_for('static', filename='img/BU.png') }}"/>
+					<img class="img-stakeholders" src="{{ url_for('static', filename='img/stanford.png') }}"/>
 				</div>
 			</div>-->
 			<div class="row md-spacer">
@@ -54,7 +55,9 @@
 			<a href='https://www.damplab.org' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/damp-lab-logo-2x_1.png') }}"/></a>
 			<a href='https://www.bu.edu/kilachandcenter/the-centers/biological-design-center/' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/BDC.png') }}"/></a>
 			<a href='https://www.bu.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/BU.png') }}"/></a>
-		</div>
+			<a href='https://www.stanford.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/stanford_logo.png') }}"/></a>
+
+        </div>
 		<div class="col-md-6 text-right">
 			<span class='copyright'>Copyright 2020, CIDAR Lab - All Rights Reserved.</span>
 			<a href='https://www.youtube.com/user/cidarlab' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/youtube.png') }}"/></a>
