--- a/app/templates/index_3.html
+++ b/app/templates/index_3.html
@@ -52,7 +52,7 @@
 			<a href='https://www.stanford.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/stanford_logo.png') }}"/></a>
         </div>
 		<div class="col-md-6 text-right">
-			<span class='copyright'>Copyright 2020, CIDAR Lab - All Rights Reserved.</span>
+			<span class='copyright'>Copyright 2023, CIDAR Lab - All Rights Reserved.</span>
 			<a href='https://www.youtube.com/user/cidarlab' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/youtube.png') }}"/></a>
 			<a href='https://twitter.com/cidar_lab?lang=en' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/twitter.png') }}"/></a>
 			<a href='https://github.com/CIDARLAB/DAFD' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/github.png') }}"/></a>
@@ -497,6 +497,11 @@
 							<div class="row">
 								<div class="col-md-12">
 									<input type="submit" class="btn-section-2" value="Generate Design" onclick="validityBackward()"/>
+								</div>
+							</div>
+                            <div class="row">
+								<div class="col-md-12">
+									<p> Note: This may take a while!</>
 								</div>
 							</div>
 						</div>
