--- a/app/templates/publications.html
+++ b/app/templates/publications.html
@@ -13,6 +13,9 @@
                     <p>For more information on Low-cost fabrication of microfluidic devices read Ali Lashkaripour, Ryan Silva, and Douglas Densmore. "<a href="https://link.springer.com/article/10.1007/s10404-018-2048-2" target="_blank">Desktop micromilled microfluidics</a>." Microfluidics and Nanofluidics 22, no. 3 (2018): 31. or contact us at <a href="mailto:lashkari@bu.edu" target="_top">lashkari@bu.edu</a>.</p>
 
                     <p>For more information of microfluidic flow-focusing droplet generation read Ali Lashkaripour, Christopher Rodriguez, Luis Ortiz, and Douglas Densmore. "<a href="https://pubs.rsc.org/en/content/articlelanding/2019/lc/c8lc01253a" target="_blank">Performance tuning of microfluidic flow-focusing droplet generators</a>." Lab on a Chip 19, no. 6 (2019): 1041-1053. or contact us at <a href="mailto:lashkari@bu.edu" target="_top">lashkari@bu.edu</a>.</p>
+
+                    <p>For more information on machine learning for microfluidic design and control read David McIntyre, Ali Lashkaripour, Polly Fordyce, and Douglas Densmore. "<a href="https://pubs.rsc.org/en/content/articlehtml/2022/lc/d2lc00254j" target="_blank">Machine learning for microfluidic design and control</a>." Lab on a Chip 22, (2022): 2925-2937. or contact us at <a href="mailto:dpmc@bu.edu" target="_top">dpmc@bu.edu</a>.</p>
+
                 </div>
             </div>
         </div>
