--- a/app/templates/forward_3_de.html
+++ b/app/templates/forward_3_de.html
@@ -5,7 +5,7 @@
 <div class="container content-container">
     <div class="row">
         <div class="col-md-6 col-sm-6">
-            <h4>Optimal Design Parameters</h4>
+            <h4>Double Emulsion Droplet Generator Predicted Performance</h4>
         </div>
     </div>
     <div class="row">
